--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "json-view-react",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/react": "^13.4.0",
+  "version": "1.0.0",
+  "description": "A react component to visualize json data",
+  "author": "uriegel",
+  "license": "MIT",
+  "repository": "uriegel/json-view-react",
+  "main": "dist/index.js",
+  "files": [
+      "dist"
+  ],
+  "devDependencies": {
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
@@ -14,8 +20,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
+    "do publish test": "npm run typescript && npm run copy &&  npm publish --dry-run",
+    "do publish": "npm run typescript && npm run copy && npm publish",
+    "typescript": "tsc -p src/component",
+    "copy": "cp src/component/JsonView.css dist/"
+},
   "eslintConfig": {
     "extends": [
       "react-app"
