json-data-view-react

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-view-react",
+  "name": "json-data-view-react",
   "version": "1.0.0",
   "description": "A react component to visualize json data",
   "author": "uriegel",
