Bug: boolean values not displayed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-data-view-react",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A react component to visualize json data",
   "author": "uriegel",
   "license": "MIT",
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "do publish test": "npm run typescript && npm run copy && npm publish --dry-run",
-    "do publish": "npm run typescript && npm publish",
+    "do publish": "npm run typescript && npm run copy && npm publish",
     "typescript": "tsc -p src/component",
     "copy": "cp src/component/JsonView.css dist/"
 },
